fix: clone do repositorio, inclusaõ da verificação e criptografia de senhas , exclusão de medicos e bloqueio de paciente por inadimplencia
